# slackybot

./: README.md  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: python-app.yml
docs/: README.md
src/slackybot/: exceptions.py  main.py  messaging.py  slack.py
src/slackybot/utilities/: config.py  helpers.py  request_handler.py
tests/: test_slack_message_object.py  test_slack_object.py
