[metadata]
name = slackybot
version = 1.0.0
author = michalm138
author_email = None
description = A Python package that helps to interact with the Slack App
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://gitlab.com/codasteroid/basicpkg
project_urls =
    Bug Tracker = https://github.com/michalm138/slackybot/issues
    repository = https://github.com/michalm138/slackybot
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    requests>=2.28.2

[options.packages.find]
where = src